Fixed layout bug in Superinput

--- a/src/components/Superinput/Superinput.scss
+++ b/src/components/Superinput/Superinput.scss
@@ -6,7 +6,8 @@ div.Superinput {
     input[type=text] {
                
         background-color: transparent;
-        border: none;        
+        border: none;   
+        flex:1;
     }
 
     input[type=image] {
